# slippery

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile.toml  README.md  default.nix  export_presets.cfg  project.godot  shell.nix  slippery.nix
.github/workflows/: check-and-lint.yml  ci.yml  release-packaging.yml  test.yml  update-niv.yml
crates/slippery_audio/: Cargo.toml
crates/slippery_audio/src/: effect.rs  envelope.rs  generator.rs  lib.rs  mixer.rs  oscillator.rs  sample.rs
crates/slippery_audio/src/effects/: distortion.rs  mod.rs
crates/slippery_camera/: Cargo.toml
crates/slippery_camera/src/: driver.rs  lib.rs  rig.rs  utils.rs
crates/slippery_camera/src/drivers/: arm.rs  lock_position.rs  look_at.rs  position.rs  rotation.rs  smooth.rs  yaw_pitch.rs
crates/slippery_core/: Cargo.toml
crates/slippery_core/src/: ball.rs  ball_resource.rs  ball_state.rs  cam_ball.rs  game.rs  game_state.rs  hud.rs  lib.rs  music.rs  sm.rs  sm_godot.rs  title_cam.rs  title_screen.rs  utils.rs
crates/slippery_core/src/ball_states/: fixed.rs  flying.rs  grounded.rs  in_air.rs  mod.rs  stunned.rs
crates/slippery_core/src/system/fly/: machine.rs  mod.rs  resource.rs
crates/slippery_core/src/system/fly/_states/: flying.rs  grounded.rs  in_air.rs  mod.rs  stunned.rs
crates/slippery_core/src/system/fly/states/: flying.rs  landing.rs  mod.rs  on_slide.rs  stunned.rs
crates/slippery_core/src/ui/: debug_overlay.rs  hud.rs  mod.rs
crates/slippery_debug/: Cargo.toml
crates/slippery_debug/src/: fps.rs
crates/slippery_macro/: Cargo.toml
crates/slippery_macro/src/: lib.rs
native/: Ball.gdns  BallResource.gdns  CameraBall.gdns  DebugOverlay.gdns  Game.gdns  GameState.gdns  Hud.gdns  Music.gdns  TitleCamera.gdns  TitleScreen.gdns  game.gdnlib
native/dbg/: Fps.gdns
nix/: default.nix
resources/: BallResource.tres  Outline.tres  Toon.tres
scenes/: Ball.tscn  DebugOverlay.tscn  Game.tscn  Hud.tscn  Music.tscn  Slider.tscn  TitleScreen.tscn
scripts/: cam_ball.gd  title_cam.gd
shaders/: outline.shader  toon.shader  toon_two_color.shader
src/: cam_ball.rs  game.rs  game_state.rs  lib.rs  title_screen.rs
