[package]
name = "slippery-core"
version = "0.1.0"
authors = ["florianvazelle <ponythugflorian@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
gdnative = "0.10"
rand = "0.7.3"
slippery-audio = { path = "../slippery_audio", version = "0.1.0" }
slippery-camera = { path = "../slippery_camera", version = "0.1.0" }
slippery-macro = { path = "../slippery_macro", version = "0.1.0" }
