[package]
name = "slippery-core"
version = "0.1.0"
authors = ["florianvazelle <ponythugflorian@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
gdnative = "0.10"
lerp = "0.4.0"
slippery-macro = { path = "../slippery_macro", version = "0.1.0" }
sm-gd = { path = "../../../sm-gd" }
convert_case = "0.5.0"